# Learning_task.

./: .gitignore
doc/: learning_note.md
src/simple_chassis_controller/: CMakeLists.txt  package.xml  simple_chassis_controller_plugins.xml
src/simple_chassis_controller/config/: controllers.yaml
src/simple_chassis_controller/include/simple_chassis_controller/: simple_chassis_controller.h
src/simple_chassis_controller/launch/: run_simulation_and_controller.launch
src/simple_chassis_controller/src/: simple_chassis_controller.cpp
src/simple_description/: CMakeLists.txt  package.xml
src/simple_description/config/: controllers.yaml  show_mycar.rviz
src/simple_description/launch/: check_joint.launch
src/simple_description/test/: test.launch
src/simple_description/urdf/: chassis.xacro  inertial.xacro  mycar.xacro  wheel.xacro
tasks/: tasks1.md
