<?xml version="1.0"?>
<package format="2">
  <name>simple_chassis_controller</name>
  <version>0.0.0</version>
  <description>The simple_chassis_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="aphrora@todo.todo">aphrora</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>urdf</depend>
  <depend>pluginlib</depend>

  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>

  <depend>realtime_tools</depend>
  <depend>hardware_interface</depend>
  <depend>effort_controllers</depend>
  <depend>joint_state_controller</depend>
  <depend>position_controllers</depend>
  <depend>forward_command_controller</depend>

  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- <depend>rm_description</depend> -->
  <!-- <depend>rm_gazebo</depend> -->
  <depend>dynamic_reconfigure</depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <controller_interface plugin="${prefix}/simple_chassis_controller_plugins.xml" />

  </export>
</package>
