<?xml version="1.0"?>
<package format="2">
  <name>simple_description</name>
  <version>0.0.0</version>
  <description>The simple_description package</description>

  <maintainer email="aphrora@todo.todo">aphrora</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
